--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ django-cors-headers==4.7.0
 django-decouple==2.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 PyJWT==2.10.1
 python-dotenv==1.1.1
 requests==2.32.4
 sqlparse==0.5.3
 urllib3==2.5.0
+whitenoise==6.9.0
